# Robotic-Dog-Tracking-Interface

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
experiment/: run_many_waypoints.py  run_waypoints.py
experiment/config/: config_dog.json
experiment/src/: ModelPredictiveControl.py  example_walk.py  run_mocap_qualisys_for_dog.py
experiment/traj/: 20240318162501.csv  20250213163448.csv  20250213163807.csv
src/: DogSys.py  ModelPredictiveControl.py  OptimalControl.py
test/: test_DogSys.py  test_OptimalSys.py  test_WayPoint_Following.py  test_json.py  test_qualisys.py
