<?xml version="1.0"?>

<package format="2">
  <name>Robotic-Dog-Interface-AIMS-Lab</name>
  <version>0.0.0</version>
  <description>The framework to implement Unitree Go1 robot for AIMS Lab.</description>
  <maintainer email="zhou1043@purdue.edu"></maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>